# go-v8

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README  README.md  bootstrap.sh  example.go  v8.go  v8_test.go  v8wrap.cc  v8wrap.def  v8wrap.h
example/: basic.go  example.go  function.go
