CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
SET(CMAKE_C_FLAGS_RELEASE "-Wall -O2 -lv8")
SET(CMAKE_C_FLAGS_DEBUG "-g -lv8")
SET(CMAKE_BUILD_TYPE Release)

PROJECT(v8wrap)
SET(serial "0.0.1")
SET(soserial "1")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
ADD_LIBRARY(v8wrap SHARED v8wrap.cc)
SET_TARGET_PROPERTIES(v8wrap PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(v8wrap PROPERTIES VERSION ${serial} SOVERSION ${soserial})
INSTALL(TARGETS v8wrap LIBRARY DESTINATION lib)
INSTALL(FILES v8wrap.h DESTINATION include)
